renaming api endpoints
