# cdk/lambda/handlers/faqHandler.js
@@ -66,8 +66,8 @@ exports.handler = async (event) => {
     const pathData = event.httpMethod + " " + event.resource;
     
     switch (pathData) {
-      case "GET /textbooks/{id}/faq":
-        const faqTextbookId = event.pathParameters?.id;
+      case "GET /textbooks/{textbook_id}/faq":
+        const faqTextbookId = event.pathParameters?.textbook_id;
         if (!faqTextbookId) {
           response.statusCode = 400;
           response.body = JSON.stringify({ error: "Textbook ID is required" });
@@ -85,8 +85,8 @@ exports.handler = async (event) => {
         response.body = JSON.stringify(data);
         break;
         
-      case "POST /textbooks/{id}/faq":
-        const postFaqTextbookId = event.pathParameters?.id;
+      case "POST /textbooks/{textbook_id}/faq":
+        const postFaqTextbookId = event.pathParameters?.textbook_id;
         if (!postFaqTextbookId) {
           response.statusCode = 400;
           response.body = JSON.stringify({ error: "Textbook ID is required" });
